// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagSelector renders and matches the snapshot when closed 1`] = `
<div>
  <Field
    forId="mock-nanoid-1"
    label={
      <span
        onClick={[Function]}
      >
        Tags
      </span>
    }
  >
    <div
      className="tag-selector"
    >
      <Input
        aria-haspopup="listbox"
        className="tag-selector__input"
        id="mock-nanoid-1"
        onChange={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        placeholder="Select or create tags"
        required={false}
        type="text"
        value=""
      />
    </div>
  </Field>
</div>
`;

exports[`TagSelector renders and matches the snapshot when opened 1`] = `
<TagSelector
  label="Tags"
  onTagsUpdate={[MockFunction]}
  placeholder="Select or create tags"
  tags={
    Array [
      Object {
        "displayName": "tag one",
        "name": "tag1",
      },
      Object {
        "displayName": "tag two",
        "name": "tag2",
      },
    ]
  }
>
  <div>
    <Field
      forId="mock-nanoid-1"
      label={
        <span
          onClick={[Function]}
        >
          Tags
        </span>
      }
    >
      <div
        className="p-form__group p-form-validation"
      >
        <Label
          forId="mock-nanoid-1"
        >
          <label
            className="p-form__label"
            htmlFor="mock-nanoid-1"
          >
            <span
              onClick={[Function]}
            >
              Tags
            </span>
          </label>
        </Label>
        <div
          className="p-form__control u-clearfix"
        >
          <div
            className="tag-selector"
          >
            <Input
              aria-haspopup="listbox"
              className="tag-selector__input"
              id="mock-nanoid-1"
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              placeholder="Select or create tags"
              required={false}
              type="text"
              value=""
            >
              <Field
                forId="mock-nanoid-1"
                helpId="mock-nanoid-3"
                isTickElement={false}
                required={false}
                validationId="mock-nanoid-2"
              >
                <div
                  className="p-form__group p-form-validation"
                >
                  <div
                    className="p-form__control u-clearfix"
                  >
                    <input
                      aria-describedby={null}
                      aria-errormessage={null}
                      aria-haspopup="listbox"
                      aria-invalid={false}
                      className="p-form-validation__input tag-selector__input"
                      id="mock-nanoid-1"
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyPress={[Function]}
                      placeholder="Select or create tags"
                      required={false}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </Field>
            </Input>
          </div>
        </div>
      </div>
    </Field>
  </div>
</TagSelector>
`;

exports[`TagSelector renders and matches the snapshot with tag descriptions 1`] = `
<TagSelector
  label="Tags"
  onTagsUpdate={[MockFunction]}
  placeholder="Select or create tags"
  tags={
    Array [
      Object {
        "description": "description one",
        "displayName": "tag one",
        "name": "tag1",
      },
      Object {
        "description": "description two",
        "displayName": "tag two",
        "name": "tag2",
      },
    ]
  }
>
  <div>
    <Field
      forId="mock-nanoid-1"
      label={
        <span
          onClick={[Function]}
        >
          Tags
        </span>
      }
    >
      <div
        className="p-form__group p-form-validation"
      >
        <Label
          forId="mock-nanoid-1"
        >
          <label
            className="p-form__label"
            htmlFor="mock-nanoid-1"
          >
            <span
              onClick={[Function]}
            >
              Tags
            </span>
          </label>
        </Label>
        <div
          className="p-form__control u-clearfix"
        >
          <div
            className="tag-selector"
          >
            <Input
              aria-haspopup="listbox"
              className="tag-selector__input"
              id="mock-nanoid-1"
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              placeholder="Select or create tags"
              required={false}
              type="text"
              value=""
            >
              <Field
                forId="mock-nanoid-1"
                helpId="mock-nanoid-3"
                isTickElement={false}
                required={false}
                validationId="mock-nanoid-2"
              >
                <div
                  className="p-form__group p-form-validation"
                >
                  <div
                    className="p-form__control u-clearfix"
                  >
                    <input
                      aria-describedby={null}
                      aria-errormessage={null}
                      aria-haspopup="listbox"
                      aria-invalid={false}
                      className="p-form-validation__input tag-selector__input"
                      id="mock-nanoid-1"
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyPress={[Function]}
                      placeholder="Select or create tags"
                      required={false}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </Field>
            </Input>
          </div>
        </div>
      </div>
    </Field>
  </div>
</TagSelector>
`;
